parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BREAK
    Bool
    CASE
    CLASS
    COMMENTS
    DEF
    DIVIDEEQUAL
    DO
    DOUBLEQUOTES
    Double
    ELIF
    EQUALEQUAL
    FINALLY
    FUNC
    Float
    GLOBAL
    GREATEREQUAL
    GREATERTHAN
    IMPORT
    INT
    IS
    LCURVEDBRACE
    LESSEQUAL
    LESSTHAN
    LSQUAREDBRACKET
    MAIN
    MINUSEQUAL
    NOT
    NOTEQUAL
    OR
    PLUSEQUAL
    RCURVEDBRACE
    RESERVEDWORD
    RETURN
    RSQUAREDBRACKET
    RULE_CLOSE
    RULE_OPEN
    SINGLEQUOTES
    SWITCH
    Str
    THEN
    TIMESEQUAL
    UNTIL

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement statements
Rule 2     statements -> statement
Rule 3     statements -> empty
Rule 4     statement -> conditional
Rule 5     statement -> expression
Rule 6     statement -> assignment_statement
Rule 7     statement -> function_call
Rule 8     statement -> print_statement
Rule 9     statement -> empty
Rule 10    conditional -> inline_if_statement
Rule 11    conditional -> for_statement
Rule 12    conditional -> while_statement
Rule 13    inline_if_statement -> IF expression COLON statements
Rule 14    inline_if_statement -> IF expression COLON statements ELSE statements
Rule 15    for_statement -> FOR expression IN range_expression
Rule 16    range_expression -> RANGE expression COMMA expression
Rule 17    while_statement -> WHILE expression COLON statements
Rule 18    bool -> TRUE
Rule 19    bool -> FALSE
Rule 20    print_statement -> PRINT LPAREN expression RPAREN
Rule 21    expression -> expression PLUS expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression TIMES expression
Rule 24    expression -> expression DIVIDE expression
Rule 25    expression -> expression EQUALTO expression
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> INTEGER
Rule 28    expression -> FLOAT
Rule 29    expression -> STRING
Rule 30    expression -> IDENTIFIER
Rule 31    expression -> bool
Rule 32    assignment_statement -> IDENTIFIER EQUAL expression
Rule 33    function_call -> IDENTIFIER LPAREN argument_list RPAREN
Rule 34    argument_list -> expression
Rule 35    argument_list -> argument_list COMMA expression
Rule 36    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
BREAK                : 
Bool                 : 
CASE                 : 
CLASS                : 
COLON                : 13 14 17
COMMA                : 16 35
COMMENTS             : 
DEF                  : 
DIVIDE               : 24
DIVIDEEQUAL          : 
DO                   : 
DOUBLEQUOTES         : 
Double               : 
ELIF                 : 
ELSE                 : 14
EQUAL                : 32
EQUALEQUAL           : 
EQUALTO              : 25
FALSE                : 19
FINALLY              : 
FLOAT                : 28
FOR                  : 15
FUNC                 : 
Float                : 
GLOBAL               : 
GREATEREQUAL         : 
GREATERTHAN          : 
IDENTIFIER           : 30 32 33
IF                   : 13 14
IMPORT               : 
IN                   : 15
INT                  : 
INTEGER              : 27
IS                   : 
LCURVEDBRACE         : 
LESSEQUAL            : 
LESSTHAN             : 
LPAREN               : 20 26 33
LSQUAREDBRACKET      : 
MAIN                 : 
MINUS                : 22
MINUSEQUAL           : 
NOT                  : 
NOTEQUAL             : 
OR                   : 
PLUS                 : 21
PLUSEQUAL            : 
PRINT                : 20
RANGE                : 16
RCURVEDBRACE         : 
RESERVEDWORD         : 
RETURN               : 
RPAREN               : 20 26 33
RSQUAREDBRACKET      : 
RULE_CLOSE           : 
RULE_OPEN            : 
SINGLEQUOTES         : 
STRING               : 29
SWITCH               : 
Str                  : 
THEN                 : 
TIMES                : 23
TIMESEQUAL           : 
TRUE                 : 18
UNTIL                : 
WHILE                : 17
error                : 

Nonterminals, with rules where they appear

argument_list        : 33 35
assignment_statement : 6
bool                 : 31
conditional          : 4
empty                : 3 9
expression           : 5 13 14 15 16 16 17 20 21 21 22 22 23 23 24 24 25 25 26 32 34 35
for_statement        : 11
function_call        : 7
inline_if_statement  : 10
print_statement      : 8
range_expression     : 15
statement            : 1 2
statements           : 1 13 14 14 17 0
while_statement      : 12

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement statements
    (2) statements -> . statement
    (3) statements -> . empty
    (4) statement -> . conditional
    (5) statement -> . expression
    (6) statement -> . assignment_statement
    (7) statement -> . function_call
    (8) statement -> . print_statement
    (9) statement -> . empty
    (36) empty -> .
    (10) conditional -> . inline_if_statement
    (11) conditional -> . for_statement
    (12) conditional -> . while_statement
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression EQUALTO expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . INTEGER
    (28) expression -> . FLOAT
    (29) expression -> . STRING
    (30) expression -> . IDENTIFIER
    (31) expression -> . bool
    (32) assignment_statement -> . IDENTIFIER EQUAL expression
    (33) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (20) print_statement -> . PRINT LPAREN expression RPAREN
    (13) inline_if_statement -> . IF expression COLON statements
    (14) inline_if_statement -> . IF expression COLON statements ELSE statements
    (15) for_statement -> . FOR expression IN range_expression
    (17) while_statement -> . WHILE expression COLON statements
    (18) bool -> . TRUE
    (19) bool -> . FALSE

  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    $end            reduce using rule 36 (empty -> .)
    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    IDENTIFIER      shift and go to state 16
    PRINT           shift and go to state 18
    IF              shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

  ! LPAREN          [ reduce using rule 36 (empty -> .) ]
  ! INTEGER         [ reduce using rule 36 (empty -> .) ]
  ! FLOAT           [ reduce using rule 36 (empty -> .) ]
  ! STRING          [ reduce using rule 36 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 36 (empty -> .) ]
  ! PRINT           [ reduce using rule 36 (empty -> .) ]
  ! IF              [ reduce using rule 36 (empty -> .) ]
  ! FOR             [ reduce using rule 36 (empty -> .) ]
  ! WHILE           [ reduce using rule 36 (empty -> .) ]
  ! TRUE            [ reduce using rule 36 (empty -> .) ]
  ! FALSE           [ reduce using rule 36 (empty -> .) ]

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    empty                          shift and go to state 3
    conditional                    shift and go to state 4
    expression                     shift and go to state 5
    assignment_statement           shift and go to state 6
    function_call                  shift and go to state 7
    print_statement                shift and go to state 8
    inline_if_statement            shift and go to state 9
    for_statement                  shift and go to state 10
    while_statement                shift and go to state 11
    bool                           shift and go to state 17

state 1

    (0) S' -> statements .



state 2

    (1) statements -> statement . statements
    (2) statements -> statement .
    (1) statements -> . statement statements
    (2) statements -> . statement
    (3) statements -> . empty
    (4) statement -> . conditional
    (5) statement -> . expression
    (6) statement -> . assignment_statement
    (7) statement -> . function_call
    (8) statement -> . print_statement
    (9) statement -> . empty
    (36) empty -> .
    (10) conditional -> . inline_if_statement
    (11) conditional -> . for_statement
    (12) conditional -> . while_statement
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression EQUALTO expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . INTEGER
    (28) expression -> . FLOAT
    (29) expression -> . STRING
    (30) expression -> . IDENTIFIER
    (31) expression -> . bool
    (32) assignment_statement -> . IDENTIFIER EQUAL expression
    (33) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (20) print_statement -> . PRINT LPAREN expression RPAREN
    (13) inline_if_statement -> . IF expression COLON statements
    (14) inline_if_statement -> . IF expression COLON statements ELSE statements
    (15) for_statement -> . FOR expression IN range_expression
    (17) while_statement -> . WHILE expression COLON statements
    (18) bool -> . TRUE
    (19) bool -> . FALSE

  ! reduce/reduce conflict for $end resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for ELSE resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for LPAREN resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for INTEGER resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for FLOAT resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for STRING resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for PRINT resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for IF resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for FOR resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for WHILE resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for TRUE resolved using rule 2 (statements -> statement .)
  ! reduce/reduce conflict for FALSE resolved using rule 2 (statements -> statement .)
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    $end            reduce using rule 2 (statements -> statement .)
    ELSE            reduce using rule 2 (statements -> statement .)
    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    IDENTIFIER      shift and go to state 16
    PRINT           shift and go to state 18
    IF              shift and go to state 19
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

  ! LPAREN          [ reduce using rule 2 (statements -> statement .) ]
  ! INTEGER         [ reduce using rule 2 (statements -> statement .) ]
  ! FLOAT           [ reduce using rule 2 (statements -> statement .) ]
  ! STRING          [ reduce using rule 2 (statements -> statement .) ]
  ! IDENTIFIER      [ reduce using rule 2 (statements -> statement .) ]
  ! PRINT           [ reduce using rule 2 (statements -> statement .) ]
  ! IF              [ reduce using rule 2 (statements -> statement .) ]
  ! FOR             [ reduce using rule 2 (statements -> statement .) ]
  ! WHILE           [ reduce using rule 2 (statements -> statement .) ]
  ! TRUE            [ reduce using rule 2 (statements -> statement .) ]
  ! FALSE           [ reduce using rule 2 (statements -> statement .) ]
  ! $end            [ reduce using rule 36 (empty -> .) ]
  ! ELSE            [ reduce using rule 36 (empty -> .) ]
  ! LPAREN          [ reduce using rule 36 (empty -> .) ]
  ! INTEGER         [ reduce using rule 36 (empty -> .) ]
  ! FLOAT           [ reduce using rule 36 (empty -> .) ]
  ! STRING          [ reduce using rule 36 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 36 (empty -> .) ]
  ! PRINT           [ reduce using rule 36 (empty -> .) ]
  ! IF              [ reduce using rule 36 (empty -> .) ]
  ! FOR             [ reduce using rule 36 (empty -> .) ]
  ! WHILE           [ reduce using rule 36 (empty -> .) ]
  ! TRUE            [ reduce using rule 36 (empty -> .) ]
  ! FALSE           [ reduce using rule 36 (empty -> .) ]

    statement                      shift and go to state 2
    statements                     shift and go to state 24
    empty                          shift and go to state 3
    conditional                    shift and go to state 4
    expression                     shift and go to state 5
    assignment_statement           shift and go to state 6
    function_call                  shift and go to state 7
    print_statement                shift and go to state 8
    inline_if_statement            shift and go to state 9
    for_statement                  shift and go to state 10
    while_statement                shift and go to state 11
    bool                           shift and go to state 17

state 3

    (3) statements -> empty .
    (9) statement -> empty .

  ! reduce/reduce conflict for LPAREN resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for INTEGER resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for FLOAT resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for STRING resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for PRINT resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for IF resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for FOR resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for WHILE resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for TRUE resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for FALSE resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 3 (statements -> empty .)
  ! reduce/reduce conflict for ELSE resolved using rule 3 (statements -> empty .)
    $end            reduce using rule 3 (statements -> empty .)
    ELSE            reduce using rule 3 (statements -> empty .)
    LPAREN          reduce using rule 3 (statements -> empty .)
    INTEGER         reduce using rule 3 (statements -> empty .)
    FLOAT           reduce using rule 3 (statements -> empty .)
    STRING          reduce using rule 3 (statements -> empty .)
    IDENTIFIER      reduce using rule 3 (statements -> empty .)
    PRINT           reduce using rule 3 (statements -> empty .)
    IF              reduce using rule 3 (statements -> empty .)
    FOR             reduce using rule 3 (statements -> empty .)
    WHILE           reduce using rule 3 (statements -> empty .)
    TRUE            reduce using rule 3 (statements -> empty .)
    FALSE           reduce using rule 3 (statements -> empty .)

  ! LPAREN          [ reduce using rule 9 (statement -> empty .) ]
  ! INTEGER         [ reduce using rule 9 (statement -> empty .) ]
  ! FLOAT           [ reduce using rule 9 (statement -> empty .) ]
  ! STRING          [ reduce using rule 9 (statement -> empty .) ]
  ! IDENTIFIER      [ reduce using rule 9 (statement -> empty .) ]
  ! PRINT           [ reduce using rule 9 (statement -> empty .) ]
  ! IF              [ reduce using rule 9 (statement -> empty .) ]
  ! FOR             [ reduce using rule 9 (statement -> empty .) ]
  ! WHILE           [ reduce using rule 9 (statement -> empty .) ]
  ! TRUE            [ reduce using rule 9 (statement -> empty .) ]
  ! FALSE           [ reduce using rule 9 (statement -> empty .) ]
  ! $end            [ reduce using rule 9 (statement -> empty .) ]
  ! ELSE            [ reduce using rule 9 (statement -> empty .) ]


state 4

    (4) statement -> conditional .

    LPAREN          reduce using rule 4 (statement -> conditional .)
    INTEGER         reduce using rule 4 (statement -> conditional .)
    FLOAT           reduce using rule 4 (statement -> conditional .)
    STRING          reduce using rule 4 (statement -> conditional .)
    IDENTIFIER      reduce using rule 4 (statement -> conditional .)
    PRINT           reduce using rule 4 (statement -> conditional .)
    IF              reduce using rule 4 (statement -> conditional .)
    FOR             reduce using rule 4 (statement -> conditional .)
    WHILE           reduce using rule 4 (statement -> conditional .)
    TRUE            reduce using rule 4 (statement -> conditional .)
    FALSE           reduce using rule 4 (statement -> conditional .)
    $end            reduce using rule 4 (statement -> conditional .)
    ELSE            reduce using rule 4 (statement -> conditional .)


state 5

    (5) statement -> expression .
    (21) expression -> expression . PLUS expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . TIMES expression
    (24) expression -> expression . DIVIDE expression
    (25) expression -> expression . EQUALTO expression

    LPAREN          reduce using rule 5 (statement -> expression .)
    INTEGER         reduce using rule 5 (statement -> expression .)
    FLOAT           reduce using rule 5 (statement -> expression .)
    STRING          reduce using rule 5 (statement -> expression .)
    IDENTIFIER      reduce using rule 5 (statement -> expression .)
    PRINT           reduce using rule 5 (statement -> expression .)
    IF              reduce using rule 5 (statement -> expression .)
    FOR             reduce using rule 5 (statement -> expression .)
    WHILE           reduce using rule 5 (statement -> expression .)
    TRUE            reduce using rule 5 (statement -> expression .)
    FALSE           reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    ELSE            reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIVIDE          shift and go to state 28
    EQUALTO         shift and go to state 29


state 6

    (6) statement -> assignment_statement .

    LPAREN          reduce using rule 6 (statement -> assignment_statement .)
    INTEGER         reduce using rule 6 (statement -> assignment_statement .)
    FLOAT           reduce using rule 6 (statement -> assignment_statement .)
    STRING          reduce using rule 6 (statement -> assignment_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> assignment_statement .)
    PRINT           reduce using rule 6 (statement -> assignment_statement .)
    IF              reduce using rule 6 (statement -> assignment_statement .)
    FOR             reduce using rule 6 (statement -> assignment_statement .)
    WHILE           reduce using rule 6 (statement -> assignment_statement .)
    TRUE            reduce using rule 6 (statement -> assignment_statement .)
    FALSE           reduce using rule 6 (statement -> assignment_statement .)
    $end            reduce using rule 6 (statement -> assignment_statement .)
    ELSE            reduce using rule 6 (statement -> assignment_statement .)


state 7

    (7) statement -> function_call .

    LPAREN          reduce using rule 7 (statement -> function_call .)
    INTEGER         reduce using rule 7 (statement -> function_call .)
    FLOAT           reduce using rule 7 (statement -> function_call .)
    STRING          reduce using rule 7 (statement -> function_call .)
    IDENTIFIER      reduce using rule 7 (statement -> function_call .)
    PRINT           reduce using rule 7 (statement -> function_call .)
    IF              reduce using rule 7 (statement -> function_call .)
    FOR             reduce using rule 7 (statement -> function_call .)
    WHILE           reduce using rule 7 (statement -> function_call .)
    TRUE            reduce using rule 7 (statement -> function_call .)
    FALSE           reduce using rule 7 (statement -> function_call .)
    $end            reduce using rule 7 (statement -> function_call .)
    ELSE            reduce using rule 7 (statement -> function_call .)


state 8

    (8) statement -> print_statement .

    LPAREN          reduce using rule 8 (statement -> print_statement .)
    INTEGER         reduce using rule 8 (statement -> print_statement .)
    FLOAT           reduce using rule 8 (statement -> print_statement .)
    STRING          reduce using rule 8 (statement -> print_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> print_statement .)
    PRINT           reduce using rule 8 (statement -> print_statement .)
    IF              reduce using rule 8 (statement -> print_statement .)
    FOR             reduce using rule 8 (statement -> print_statement .)
    WHILE           reduce using rule 8 (statement -> print_statement .)
    TRUE            reduce using rule 8 (statement -> print_statement .)
    FALSE           reduce using rule 8 (statement -> print_statement .)
    $end            reduce using rule 8 (statement -> print_statement .)
    ELSE            reduce using rule 8 (statement -> print_statement .)


state 9

    (10) conditional -> inline_if_statement .

    LPAREN          reduce using rule 10 (conditional -> inline_if_statement .)
    INTEGER         reduce using rule 10 (conditional -> inline_if_statement .)
    FLOAT           reduce using rule 10 (conditional -> inline_if_statement .)
    STRING          reduce using rule 10 (conditional -> inline_if_statement .)
    IDENTIFIER      reduce using rule 10 (conditional -> inline_if_statement .)
    PRINT           reduce using rule 10 (conditional -> inline_if_statement .)
    IF              reduce using rule 10 (conditional -> inline_if_statement .)
    FOR             reduce using rule 10 (conditional -> inline_if_statement .)
    WHILE           reduce using rule 10 (conditional -> inline_if_statement .)
    TRUE            reduce using rule 10 (conditional -> inline_if_statement .)
    FALSE           reduce using rule 10 (conditional -> inline_if_statement .)
    $end            reduce using rule 10 (conditional -> inline_if_statement .)
    ELSE            reduce using rule 10 (conditional -> inline_if_statement .)


state 10

    (11) conditional -> for_statement .

    LPAREN          reduce using rule 11 (conditional -> for_statement .)
    INTEGER         reduce using rule 11 (conditional -> for_statement .)
    FLOAT           reduce using rule 11 (conditional -> for_statement .)
    STRING          reduce using rule 11 (conditional -> for_statement .)
    IDENTIFIER      reduce using rule 11 (conditional -> for_statement .)
    PRINT           reduce using rule 11 (conditional -> for_statement .)
    IF              reduce using rule 11 (conditional -> for_statement .)
    FOR             reduce using rule 11 (conditional -> for_statement .)
    WHILE           reduce using rule 11 (conditional -> for_statement .)
    TRUE            reduce using rule 11 (conditional -> for_statement .)
    FALSE           reduce using rule 11 (conditional -> for_statement .)
    $end            reduce using rule 11 (conditional -> for_statement .)
    ELSE            reduce using rule 11 (conditional -> for_statement .)


state 11

    (12) conditional -> while_statement .

    LPAREN          reduce using rule 12 (conditional -> while_statement .)
    INTEGER         reduce using rule 12 (conditional -> while_statement .)
    FLOAT           reduce using rule 12 (conditional -> while_statement .)
    STRING          reduce using rule 12 (conditional -> while_statement .)
    IDENTIFIER      reduce using rule 12 (conditional -> while_statement .)
    PRINT           reduce using rule 12 (conditional -> while_statement .)
    IF              reduce using rule 12 (conditional -> while_statement .)
    FOR             reduce using rule 12 (conditional -> while_statement .)
    WHILE           reduce using rule 12 (conditional -> while_statement .)
    TRUE            reduce using rule 12 (conditional -> while_statement .)
    FALSE           reduce using rule 12 (conditional -> while_statement .)
    $end            reduce using rule 12 (conditional -> while_statement .)
    ELSE            reduce using rule 12 (conditional -> while_statement .)


state 12

    (26) expression -> LPAREN . expression RPAREN
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression EQUALTO expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . INTEGER
    (28) expression -> . FLOAT
    (29) expression -> . STRING
    (30) expression -> . IDENTIFIER
    (31) expression -> . bool
    (18) bool -> . TRUE
    (19) bool -> . FALSE

    LPAREN          shift and go to state 12
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 14
    STRING          shift and go to state 15
    IDENTIFIER      shift and go to state 31
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 30
    bool                           shift and go to state 17

state 13

    (27) expression -> INTEGER .

    PLUS            reduce using rule 27 (expression -> INTEGER .)
    MINUS           reduce using rule 27 (expression -> INTEGER .)
    TIMES           reduce using rule 27 (expression -> INTEGER .)
    DIVIDE          reduce using rule 27 (expression -> INTEGER .)
    EQUALTO         reduce using rule 27 (expression -> INTEGER .)
    LPAREN          reduce using rule 27 (expression -> INTEGER .)
    INTEGER         reduce using rule 27 (expression -> INTEGER .)
    FLOAT           reduce using rule 27 (expression -> INTEGER .)
    STRING          reduce using rule 27 (expression -> INTEGER .)
    IDENTIFIER      reduce using rule 27 (expression -> INTEGER .)
    PRINT           reduce using rule 27 (expression -> INTEGER .)
    IF              reduce using rule 27 (expression -> INTEGER .)
    FOR             reduce using rule 27 (expression -> INTEGER .)
    WHILE           reduce using rule 27 (expression -> INTEGER .)
    TRUE            reduce using rule 27 (expression -> INTEGER .)
    FALSE           reduce using rule 27 (expression -> INTEGER .)
    $end            reduce using rule 27 (expression -> INTEGER .)
    ELSE            reduce using rule 27 (expression -> INTEGER .)
    RPAREN          reduce using rule 27 (expression -> INTEGER .)
    COLON           reduce using rule 27 (expression -> INTEGER .)
    IN              reduce using rule 27 (expression -> INTEGER .)
    COMMA           reduce using rule 27 (expression -> INTEGER .)


state 14

    (28) expression -> FLOAT .

    PLUS            reduce using rule 28 (expression -> FLOAT .)
    MINUS           reduce using rule 28 (expression -> FLOAT .)
    TIMES           reduce using rule 28 (expression -> FLOAT .)
    DIVIDE          reduce using rule 28 (expression -> FLOAT .)
    EQUALTO         reduce using rule 28 (expression -> FLOAT .)
    LPAREN          reduce using rule 28 (expression -> FLOAT .)
    INTEGER         reduce using rule 28 (expression -> FLOAT .)
    FLOAT           reduce using rule 28 (expression -> FLOAT .)
    STRING          reduce using rule 28 (expression -> FLOAT .)
    IDENTIFIER      reduce using rule 28 (expression -> FLOAT .)
    PRINT           reduce using rule 28 (expression -> FLOAT .)
    IF              reduce using rule 28 (expression -> FLOAT .)
    FOR             reduce using rule 28 (expression -> FLOAT .)
    WHILE           reduce using rule 28 (expression -> FLOAT .)
    TRUE            reduce using rule 28 (expression -> FLOAT .)
    FALSE           reduce using rule 28 (expression -> FLOAT .)
    $end            reduce using rule 28 (expression -> FLOAT .)
    ELSE            reduce using rule 28 (expression -> FLOAT .)
    RPAREN          reduce using rule 28 (expression -> FLOAT .)
    COLON           reduce using rule 28 (expression -> FLOAT .)
    IN              reduce using rule 28 (expression -> FLOAT .)
    COMMA           reduce using rule 28 (expression -> FLOAT .)


state 15

    (29) expression -> STRING .

    PLUS            reduce using rule 29 (expression -> STRING .)
    MINUS           reduce using rule 29 (expression -> STRING .)
    TIMES           reduce using rule 29 (expression -> STRING .)
    DIVIDE          reduce using rule 29 (expression -> STRING .)
    EQUALTO         reduce using rule 29 (expression -> STRING .)
    LPAREN          reduce using rule 29 (expression -> STRING .)
    INTEGER         reduce using rule 29 (expression -> STRING .)
    FLOAT           reduce using rule 29 (expression -> STRING .)
    STRING          reduce using rule 29 (expression -> STRING .)
    IDENTIFIER      reduce using rule 29 (expression -> STRING .)
    PRINT           reduce using rule 29 (expression -> STRING .)
    IF              reduce using rule 29 (expression -> STRING .)
    FOR             reduce using rule 29 (expression -> STRING .)
    WHILE           reduce using rule 29 (expression -> STRING .)
    TRUE            reduce using rule 29 (expression -> STRING .)
    FALSE           reduce using rule 29 (expression -> STRING .)
    $end            reduce using rule 29 (expression -> STRING .)
    ELSE            reduce using rule 29 (expression -> STRING .)
    RPAREN          reduce using rule 29 (expression -> STRING .)
    COLON           reduce using rule 29 (expression -> STRING .)
    IN              reduce using rule 29 (expression -> STRING .)
    COMMA           reduce using rule 29 (expression -> STRING .)


state 16

    (30) expression -> IDENTIFIER .
    (32) assignment_statement -> IDENTIFIER . EQUAL expression
    (33) function_call -> IDENTIFIER . LPAREN argument_list RPAREN
